<resources>
    <string name="app_name">Auction</string>
    <string name="auction_image">Auction Image</string>
    <string name="auctioned_product_detailed_description">Auctioned product detailed description</string>
    <string name="highest_bid">Highest bid:</string>
    <string name="lowest_bid">Lowest bid:</string>
    <string name="highest_bids">Highest bids</string>
    <string name="message_alert_send_bid_failure">There was an error on attepting to send the bid</string>
    <string name="message_alert_bid_limit_exceeded">User exceeded the limit of five bids in the same auction</string>
    <string name="message_alert_two_bids_in_a_row">User can\'t place two bids in a row</string>
    <string name="message_alert_invalid_value">Invalid value</string>
    <string name="ok_button">Ok</string>
    <string name="message_alert_bid_should_be_higher_than_last_bid">Bid should be higher than last bid</string>
    <string name="appbar_title_auction_bids">Auction Bids</string>
    <string name="dialog_no_users_found">No users found</string>
    <string name="message_dialog_no_users_registered">There are no registered users. Register a user for placing a bid</string>
    <string name="dialog_add_user">Add user</string>
    <string name="value">Value</string>
    <string name="user">User</string>
    <string name="alert_title_new_bid">New Bid</string>
    <string name="bid">Bid</string>
    <string name="cancel">Cancel</string>
    <string name="appbar_title_auctions">Auctions</string>
    <string name="message_alert_load_auctions_error">Unable to load auctions</string>
    <string name="users">Users</string>
    <string name="name">Name</string>
    <string name="alert_title_new_user">New User</string>
    <string name="add">Add</string>
</resources>
